# rs-demo-1

./: .gitignore  Cargo.toml  _build.rs  diesel.toml
src/: diesel.rs  main.rs
src/cornucopia/: queries.rs  run.rs
src/cornucopia/queries/: demo.sql
src/cornucopia/queries-inventory/: item.sql
src/diesel/: models.rs  run.rs  schema.rs
src/linfa/: run.rs
src/prompt/: run.rs
