[package]
name = "rust-demo"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cornucopia = "0.9.0"
dotenvy = "0.15.7"
postgres = "0.19.10"

[dependencies]
# cornucopia
cornucopia_async = "0.6.0"
deadpool-postgres = "0.12.1" # outdated
dotenvy = "0.15.7"
futures = "0.3.31"
postgres-types = "0.2.9"
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.41", features = ["serde"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.13", features = ["with-time-0_3", "with-uuid-1"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
# linfa
csv = "1.3.1"
linfa = "0.7.1"
ndarray = "0.15.6"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
plotters = "0.3.7"
# diesel
diesel = { version = "2.3.5", features = ["postgres"] }
